syntax = "proto3";

package session;
// SESSION SERVICE

service SessionService {
  rpc GetByIdSession (GetByIdSessionRequest) returns (GetByIdSessionReply) {}
  rpc GetAllSession (GetAllSessionRequest) returns (GetAllSessionReply) {}
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionReply) {}
  rpc UpdateSession (UpdateSessionRequest) returns (UpdateSessionReply) {}
  rpc DeleteSession (DeleteSessionRequest) returns (DeleteSessionReply) {}
}

message Session {
  string movie_id = 1;
  string room_id = 2;
  string start_time = 3;
  string end_time = 4;
  string screening_date = 5;
  string session_id = 6;
  string cinema_id = 7;
  string movie_format = 8;
  string room_format = 9;
  string movie_release_date = 10;
  int32 movie_runtime = 11;
}

message GetByIdSessionRequest {
  string SessionId = 1;
}

message GetByIdSessionReply {
  string movie_id = 1;
  string room_id = 2;
  string start_time = 3;
  string end_time = 4;
  string screening_date = 5;
  string session_id = 6;
  string cinema_id = 7;
  string movie_format = 8;
  string room_format = 9;
  string movie_release_date = 10;
  int32 movie_runtime = 11;
}

message GetAllSessionRequest {
  optional int32 page = 2;
  optional int32 limit = 3;
}

message GetAllSessionReply {
  repeated Session sessions = 1;
}

message CreateSessionRequest {
  string movie_id = 1;
  string room_id = 2;
  string start_time = 3;
  string end_time = 4;
  string screening_date = 5;
  string cinema_id = 6;
  string movie_format = 7;
  string room_format = 8;
  string movie_release_date = 9;
  int32 movie_runtime = 10;
}

message CreateSessionReply {
  string message = 1;
}

message UpdateSessionRequest {
  string movie_id = 1;
  string room_id = 2;
  string start_time = 3;
  string end_time = 4;
  string screening_date = 5;
  string session_id = 6;
  string cinema_id = 7;
  string movie_format = 8;
  string room_format = 9;
  string movie_release_date = 10;
  int32 movie_runtime = 11;
}

message UpdateSessionReply {
  string message = 1;
}

message DeleteSessionRequest {
  string session_id = 1;
}

message DeleteSessionReply {
  string message = 1;
}